# calibration_in_llm

./: .gitignore  CMakeLists.txt  README  README.md
include/commands/: extract_probabilities.h
include/utils/: input_iterator.h  llama_cpp_helper.h  parse_custom_params.h  result_reader.h  result_writer.h
include/utils/position_result/: position_full_result.h  position_result.h  position_top_result.h
scripts/: convert.py  evaluate.py  experiment_info.py  main.py  perplexity.py  position_result.py  requirements.txt  result_reader.py  softmax.py  visualize.py
scripts/tests/: result_reader_test.py
src/commands/: check_integrity.cpp  extract_probabilities.cpp  generate_mock_data.cpp
src/utils/: endianness.cpp  input_iterator.cpp  llama_cpp_helper.cpp  parse_custom_params.cpp  result_reader.cpp  result_writer.cpp  softmax.cpp
src/utils/position_result/: position_full_result.cpp  position_result.cpp  position_top_result.cpp
tests/: CMakeLists.txt  result_writer_test.cpp  test_custom_params_parser.cpp  test_top_result_data_structure.cpp
tools/benchmark/: install.sh  launch_server.sh  lm_eval.sh
tools/calibrator/: add_ece.py  cpp_constants.py  evaluate.py  experiment_info.py  main.py  pipeline2.sh  pipeline3.sh  visualize.py
tools/calibrator/tests/: convert_test.py  result_reader_test.py
tools/calibrator/utils/: convert.py  ece.py  inverse_sigmoid.py  normalize.py  perplexity.py  position_result.py  result_reader.py  softmax.py
tools/datasets/: gsm8k.ipynb  gsm8k.py  gsm8k_lm_eval.txt  redpajama_arxiv.py  redpajama_data.ipynb  wikitext2.py
tools/extractor/: CMakeLists.txt
tools/extractor/include/commands/: extract_probabilities.h
tools/extractor/include/utils/: llama_cpp_helper.h  result_writer.h  softmax.h
tools/extractor/include/utils/position_result/: position_full_result.h  position_result.h  position_top_result.h
tools/extractor/src/commands/: extract_probabilities.cpp  generate_mock_data.cpp
tools/extractor/src/utils/: input_iterator.cpp  llama_cpp_helper.cpp  result_reader.cpp  result_writer.cpp  softmax.cpp
tools/extractor/src/utils/position_result/: position_top_result.cpp
tools/extractor/tests/: CMakeLists.txt  result_writer_test.cpp  test_checksum.cpp  test_cuda.cpp  test_softmax.cpp  test_top_result_data_structure.cpp
